Criação do HTML

--- a/front-end/listpage/index.html
+++ b/front-end/listpage/index.html
@@ -1,14 +1,93 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-<title>Listas em HTML</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-<ol>
-<li>Nome</li>
-<li>Telefone</li>
-<li>Endereço</li>
-<li>País</li>
-</ol>
+    <h1>Caregivers</h1>
+    <hr>
+    <nav>
+        <ul class="menu">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Encontra um cuidador</a></li>
+                    <li><a href="#">Candidatos</a>
+                    <ul>
+                    <li><a href="#">Suporte</a></li>
+      </ul>
+      <br>
+    <div id="divBusca">
+        <input type="text" id="txtBusca" placeholder="Buscar..."/>
+        <img src="search.png" id="btnBusca" alt="Buscar"/>
+      </div>
+      <div id="divCity">
+        <input type="City" id="txtCity" placeholder="City, state or zip code..."/>
+        <img src="search.png" id="btnCity" alt="City"/>
+      </div>
+      
+      <hr>
+      <br>
+      <br>
+      <hr>
+
+      <h2>Clara Bytecode</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+      
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Rafael Bugnado</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Bianca Nullpointer</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Lucas Loopback</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Helena Scriptada</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Gustavo Firewall</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+      <h2>Marina Debugueira</h2>
+      <p>Intership Salary:20,000 - 25,000</p>
+      <p>Dhaka, Bangladesh</p>
+
+      <hr>
+      <br>
+      <hr>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
