barra de navegação

--- a/front-end/homepage/index.html
+++ b/front-end/homepage/index.html
@@ -1,5 +1,32 @@
 <!DOCTYPE html>
-<div id="divbusca">
-    <input type="text" id="txtBusca" placeholder="Buscar...">
-    <img src="search3.png"
-</div>
+<html lang="pt-BR">
+    <head>
+        <meta charset="utf-8">
+        <title>Cuidadores</title>
+        <style>
+            .conteiner {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        </style>
+        </head>
+        <body>
+            <h1>Cuidadores</h1>
+            <nav>
+                <ul>
+                    <li><a
+href="#home">Home</a></li>
+<li><a
+href="#encontrarumcuidador">Encontrar um cuidador</a></li>
+<li><a
+href="#cadastro">Cadastro</a></li>
+<li><a
+href="#suporte">Suporte</a></li>
+                </ul>
+            </nav>
+    <div id="divbusca"></div>
+    <input type="text" id="txtbusca" placeholder="Buscar...">
+    <buttom id="btnBusca">Buscar</buttom>
+    </body>
+</html>
